--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </header>
   <main>
     Основной контент
+    <p>Сегодня я научилась работать с Git</p>
   </main>
   <footer>
     Футер сайта
