--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -16,5 +17,6 @@
   <footer>
     Футер сайта
   </footer>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
